# my-web

./: .gitignore  default.nix  my-web.cabal  nixpkgs.nix  stack.yaml
client/: Api.elm  GenerateElm.hs  Main.elm  Makefile  elm-package.json
src/: Api.hs  App.hs  Lib.hs
