name:                my-web
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/my-web#readme
license:             BSD3
license-file:        LICENSE
author:              chui
maintainer:          troiluscao@gmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , App
                     , Api
  build-depends:       base >= 4.7 && < 5
                     , servant-server
                     , wai
                     , wai-make-assets
                     , warp
                     , aeson
                     , text-show
                     , transformers >= 0.5
                     , servant-elm
  default-language:    Haskell2010

executable my-web-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , my-web
  default-language:    Haskell2010

test-suite my-web-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , my-web
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/my-web
